logs/py-optimus.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/optimus'...
Compiling './lib/python3.5/site-packages/optimus/optimus.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (optimus.py, line 38)
Listing './lib/python3.5/site-packages/optimus/templates'...
Listing './lib/python3.5/site-packages/optimus/templates/tornado'...
Listing './lib/python3.5/site-packages/optimus/templates/tornado/migrations'...
Compiling './lib/python3.5/site-packages/optimus/templates/tornado/migrations/env.py'...
***   File "./lib/python3.5/site-packages/optimus/templates/tornado/migrations/env.py", line 25
    from {{ project_name }}.models import Base
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/optimus/templates/tornado/project_name'...
Listing './lib/python3.5/site-packages/optimus/templates/tornado/project_name/handlers'...
Compiling './lib/python3.5/site-packages/optimus/templates/tornado/project_name/handlers/hello.py'...
***   File "./lib/python3.5/site-packages/optimus/templates/tornado/project_name/handlers/hello.py", line 4
    from {{ project_name }}.handlers import BaseHandler
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/optimus/templates/tornado/project_name/models'...
Compiling './lib/python3.5/site-packages/optimus/templates/tornado/project_name/models/base.py'...
***   File "./lib/python3.5/site-packages/optimus/templates/tornado/project_name/models/base.py", line 10
    from {{ project_name }} import settings
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/optimus/templates/tornado/project_name/settings'...
Listing './lib/python3.5/site-packages/optimus/templates/tornado/project_name/static'...
Listing './lib/python3.5/site-packages/optimus/templates/tornado/project_name/templates'...
Compiling './lib/python3.5/site-packages/optimus/templates/tornado/project_name/urls.py'...
***   File "./lib/python3.5/site-packages/optimus/templates/tornado/project_name/urls.py", line 4
    from {{ project_name }}.handlers.hello import HelloHandler
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/optimus/templates/tornado/project_name/utils'...
Listing './lib/python3.5/site-packages/optimus/templates/tornado/requirements'...
Listing './lib/python3.5/site-packages/optimus/templates/tornado/tests'...
Compiling './lib/python3.5/site-packages/optimus/templates/tornado/tests/base.py'...
***   File "./lib/python3.5/site-packages/optimus/templates/tornado/tests/base.py", line 7
    from {{ project_name }}.main import app
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/optimus/templates/tornado/tests/handlers'...
Listing './lib/python3.5/site-packages/optimus/templates/tornado/tests/utils'...
Listing './lib/python3.5/site-packages/optimus/utils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py_optimus-0.0.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
